# cmake_exercise

./: CMakeLists.txt  foo.cpp  foo.h  main.cpp
cmake/: check-compiler-flags.cmake
